[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/Zombie/Idle/zombie_Idle_3.png" type="Texture" id=1]
[ext_resource path="res://scripts/Zombie.gd" type="Script" id=2]
[ext_resource path="res://assets/Zombie/Idle/zombie_Idle_0.png" type="Texture" id=3]
[ext_resource path="res://assets/Zombie/Idle/zombie_Idle_1.png" type="Texture" id=4]
[ext_resource path="res://assets/Zombie/Idle/zombie_Idle_2.png" type="Texture" id=5]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_7.png" type="Texture" id=6]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_8.png" type="Texture" id=7]
[ext_resource path="res://assets/Zombie/Walk/zombie_Walk_2.png" type="Texture" id=8]
[ext_resource path="res://assets/Zombie/Walk/zombie_Walk_3.png" type="Texture" id=9]
[ext_resource path="res://assets/Zombie/Walk/zombie_Walk_1.png" type="Texture" id=10]
[ext_resource path="res://assets/Zombie/Walk/zombie_Walk_4.png" type="Texture" id=11]
[ext_resource path="res://assets/Zombie/Attack/zombie_Attack_3.png" type="Texture" id=12]
[ext_resource path="res://assets/Zombie/Attack/zombie_Attack_1.png" type="Texture" id=13]
[ext_resource path="res://assets/Zombie/Attack/zombie_Attack_4.png" type="Texture" id=14]
[ext_resource path="res://assets/Zombie/Attack/zombie_Attack_5.png" type="Texture" id=15]
[ext_resource path="res://assets/Zombie/Hit/zombie_Hit_2.png" type="Texture" id=16]
[ext_resource path="res://assets/Zombie/Hit/zombie_Hit_4.png" type="Texture" id=17]
[ext_resource path="res://assets/Zombie/Hit/zombie_Hit_1.png" type="Texture" id=18]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_0.png" type="Texture" id=19]
[ext_resource path="res://assets/Zombie/Hit/zombie_Hit_0.png" type="Texture" id=20]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_1.png" type="Texture" id=21]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_2.png" type="Texture" id=22]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_4.png" type="Texture" id=23]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_5.png" type="Texture" id=24]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_3.png" type="Texture" id=25]
[ext_resource path="res://assets/Zombie/Hit/zombie_Hit_3.png" type="Texture" id=26]
[ext_resource path="res://assets/Zombie/Dead/zombie_Dead_6.png" type="Texture" id=27]
[ext_resource path="res://assets/Zombie/Attack/zombie_Attack_2.png" type="Texture" id=28]
[ext_resource path="res://assets/Zombie/Walk/zombie_Walk_0.png" type="Texture" id=29]
[ext_resource path="res://assets/Zombie/Attack/zombie_Attack_0.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 13 ), ExtResource( 28 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 17 ) ],
"loop": false,
"name": "damage",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 14.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.25, 1.25 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 11.0
height = 28.0

[node name="Zombie" type="KinematicBody2D"]
position = Vector2( 32, 32 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = -3.14159
scale = Vector2( 2, -2 )
frames = SubResource( 5 )
animation = "idle"
frame = 2
playing = true

[node name="bodyHitbox" type="Area2D" parent="."]
position = Vector2( 4, 16 )
scale = Vector2( 1, 0.85 )

[node name="body" type="CollisionShape2D" parent="bodyHitbox"]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="headHitbox" type="Area2D" parent="."]
position = Vector2( -1, -11 )

[node name="head" type="CollisionShape2D" parent="headHitbox"]
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="footcheck" type="RigidBody2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="footcheck"]
position = Vector2( 3.5, 30.5 )
scale = Vector2( 2, 2 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 0.25, 1 )
shape = SubResource( 4 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -3.0
margin_top = -31.0
margin_right = 2.0
margin_bottom = -26.0

[node name="cleanup" type="Timer" parent="."]
wait_time = 10.0

[connection signal="area_entered" from="bodyHitbox" to="." method="_on_bodyHitbox_area_entered"]
[connection signal="body_entered" from="bodyHitbox" to="." method="_on_bodyHitbox_body_entered"]
[connection signal="area_entered" from="headHitbox" to="." method="_on_headHitbox_area_entered"]
[connection signal="body_entered" from="headHitbox" to="." method="_on_headHitbox_body_entered"]
[connection signal="timeout" from="cleanup" to="." method="_on_cleanup_timeout"]
